# leon-pattern-miner

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: README.md
benchmark/cie-extraction-v0/: manifest.json
docs/model-facts/: diffusiongemma.md
docs/plans/: 2026-06-10-leon-pattern-miner-implementation-plan.md  cie-extraction-benchmark-roadmap-2026-06-13.md  diffusiongemma-4090-minermark-implementation-plan-2026-06-14.md  grok43-data-mining-adapter-implementation-plan-2026-06-14.md  grok43-data-mining-adapter-requirements-2026-06-14.md  hermes-native-mining-takeaways-remediation-plan-2026-06-13.md  legacy-llm-retirement-2026-06-17.md  tool-issues-remediation-opus-plan-2026-06-17.md
docs/prompts/: standing-goal-interaction-optimization-2026-06-13.md
docs/specs/: hermes-native-mining-takeaways-remediation-spec-2026-06-13.md
docs/status/: current-state.md  diffusiongemma-4090-smoke-2026-06-14.md  grok43-xai-adapter-2026-06-14.md  minermark-readiness-2026-06-13.md  (+1 more)
scripts/: freeze_benchmark_dataset.py  llama_diffusion_cli_docker.sh  monitor_once.sh  run_benchmark.py  run_cie_qwen_harness.py  run_cie_recall_gate.py  run_full_corpus_monitor.sh  run_pilot_resume.sh
tests/: test_adapters.py  test_benchmark.py  test_cie_harness.py  test_cie_recall.py  test_core_pipeline.py  test_deterministic_dedupe.py  test_legacy_llm_retirement.py  test_llm_provider_extractors.py  test_mine_cycle.py  test_no_raw_session_data.py  test_outcome_attribution.py  test_outcome_facets_prompt.py  test_provider_chat.py  test_provider_usage.py
(+70 files in other folders)
