[project]
name = "leon-pattern-miner"
version = "0.1.0"
description = "Local conversation miner for Leon/Hermes steering, agent behavior, and project methodology patterns."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
miner = "leon_pattern_miner.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leon_pattern_miner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
